# data-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.logger  Dockerfile.processor  README.md  bot.py  build.sh  data_logger_service.py  data_processor_service.py  docker-compose.yml  init.sh  napcat_logger_service.py  pyproject.toml  requirements.txt  telemetry.py
.github/workflows/: python-dockerhub.yml
contracts/: chat_image_task.py
data-logger/: Dockerfile
data-logger/service/: main.py
data-processor/: Dockerfile
data_logger/: service
data_processor/: service
fluent-bit/: fluent-bit.conf
logger_service/: Dockerfile
logger_service/service/: export.py  main.py  telemetry.py
plugins/: __init__.py  group_logger.py
plugins/chat_image/: __init__.py  config.py  downloader.py  nats_task_bus.py  service.py  tagger_cli.py  tagger_pipeline.py  tagger_worker.py
plugins/napcat/: __init__.py  config.py  connection.py  event.py  handler.py  pipeline.py
plugins/persistence/: db.py
processor_service/: Dockerfile
processor_service/service/: health.py  main.py  telemetry.py
services/data_logger/: Dockerfile  __init__.py  main.py
services/data_processor/: Dockerfile  main.py
tests/: test_chat_image_config.py  test_chat_image_nats_publisher.py  test_chat_image_nats_task_bus.py  test_chat_image_outbox_relay.py  test_chat_image_storage.py  test_chat_image_tagger_pipeline.py  test_chat_image_tagger_worker.py  test_export_cli.py  test_logger_health.py  test_logger_main.py  test_logger_telemetry.py  test_napcat_config.py  test_napcat_connection.py  test_napcat_event.py  test_napcat_handler_refresh.py  test_napcat_pipeline.py  test_persistence_config.py  test_persistence_db.py  test_persistence_repository.py  test_processor_graceful_shutdown.py  test_processor_health.py  test_processor_main.py  test_processor_telemetry.py
(+94 files in other folders)
