[project]
name = "data-assistant"
version = "0.1.0"
description = "data-assistant"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "Pillow>=10.0.0",
    "loguru>=0.7.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "nats-py>=2.9.0",
]

[project.scripts]
data-assistant-logger = "napcat_logger_service:run"
data-assistant-processor = "data_processor_service:main"
